<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">
    <HorizontalScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/buttonTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonTest_enabled"
                android:onClick="onButtonLatencyTest"/>

            <Button
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/buttonStopTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonStopTest"
                android:onClick="onButtonStopTest"/>

            <Button
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonSave"
                android:onClick="onButtonSave"/>

            <Button
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/buttonSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonSettings"
                android:onClick="onButtonSettings"/>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/labelInfo"/>

    <HorizontalScrollView
        android:id="@+id/ScrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/buttonZoomIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonZoomIn"
                android:onClick="onButtonZoomIn"/>

            <Button
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/buttonZoomOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonZoomOut"
                android:onClick="onButtonZoomOut"/>

            <Button
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/buttonZoomOutFull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonZoomOutFull"
                android:onClick="onButtonZoomOutFull"/>
            <Button
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/buttonAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonAbout"
                android:onClick="onButtonAbout"/>
        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/ScrollView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/buttonBufferTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonBufferTest"
                android:onClick="onButtonBufferTest"/>


            <Button
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/buttonGlitches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonGlitches"
                android:onClick="onButtonGlitches"/>
        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/ScrollView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bufferPeriods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="18sp"
                android:text="@string/showBufferPeriods"/>

            <Button
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/buttonRecorderBufferPeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonRecorderBufferPeriod"
                android:onClick="onButtonRecorderBufferPeriod"/>

            <Button
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/buttonPlayerBufferPeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonPlayerBufferPeriod"
                android:onClick="onButtonPlayerBufferPeriod"/>
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current Level"
            android:id="@+id/textViewCurrentLevel"/>

        <SeekBar
            android:id="@+id/BarMasterLevel"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="latency"
            android:id="@+id/textViewEstimatedLatency"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="0mm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_weight="1">

        <org.drrickorang.loopback.WavePlotView
            android:id="@+id/viewWavePlot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
